[project]
name = "homeassistant-routeros-lte"
version = "1.0.0"
description = "Home Assistant HACS integration for MikroTik RouterOS LTE and network monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "librouteros>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "homeassistant",
    "ruff>=0.4.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "A",
    "N",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.routeros_lte"]
